# angular-bazel-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bs-config.js  bundle.js  deployment.yaml  es6_consumer.bzl  generate.ts  ibazel  index.html  link.sh  out  out-dir  package-lock.json  package.json  rollup.config.js  source_aspects.bzl  system-config.js  tsconfig.json
airplane/: BUILD.bazel  app.ts  devserver.js  patch-rxjs-amd.js
airplane/team0/: BUILD.bazel  module.ts
airplane/team1/: BUILD.bazel  module.ts
airplane/team2/: BUILD.bazel  module.ts
airplane/team3/: BUILD.bazel  module.ts
airplane/team4/: BUILD.bazel  module.ts
airplane/team5/: BUILD.bazel  module.ts
airplane/team6/: BUILD.bazel  module.ts
airplane/team7/: BUILD.bazel  module.ts
airplane/team8/: BUILD.bazel  module.ts
airplane/team9/: BUILD.bazel  module.ts
angular-demo/: BUILD.bazel  app.component.ts  app.module.ts  app.routes.ts  app.ts  bundle.js  concat.js  main.ts
angular-demo/editor/: BUILD.bazel  character.ts  document.ts  editor.css  editor.module.ts  editor.ts
angular-demo/grid/: BUILD.bazel  column.ts  grid-demo.ts  grid.html  grid.module.ts  grid.ts  sorter.ts
angular-demo/insertion-sort/: BUILD.bazel  insertion-sort.component.css  insertion-sort.component.ts  insertion-sort.module.ts  insertion-sort.ts  value-list.ts
angular-demo/spreadsheet/: BUILD.bazel  column.ts  key-map.ts  row.ts  spreadsheet.css  spreadsheet.module.ts  spreadsheet.ts  spreadsheetModel.ts
angular-demo/team/: BUILD.bazel  team.component.ts  team.module.ts
angular-demo/team0/: BUILD.bazel
angular-demo/team1/: BUILD.bazel
angular-demo/team2/: BUILD.bazel
angular-demo/team3/: BUILD.bazel
angular-demo/team4/: BUILD.bazel
angular-demo/team5/: BUILD.bazel
angular-demo/team6/: BUILD.bazel
angular-demo/team7/: BUILD.bazel
angular-demo/team8/: BUILD.bazel
angular-demo/team9/: BUILD.bazel
angular-demo/treeview/: BUILD.bazel  directory.ts  treeview-demo.ts  treeview.css  treeview.module.ts  treeview.ts
biofuels/: BUILD.bazel  app.ts
biofuels/team0/: BUILD.bazel  module.ts
biofuels/team1/: BUILD.bazel  module.ts
biofuels/team2/: BUILD.bazel  module.ts
biofuels/team3/: BUILD.bazel  module.ts
biofuels/team4/: BUILD.bazel  module.ts
biofuels/team5/: BUILD.bazel  module.ts
biofuels/team6/: BUILD.bazel  module.ts
biofuels/team7/: BUILD.bazel  module.ts
biofuels/team8/: BUILD.bazel  module.ts
biofuels/team9/: BUILD.bazel  module.ts
catapult/: BUILD.bazel  app.ts
catapult/team0/: BUILD.bazel  module.ts
catapult/team1/: BUILD.bazel  module.ts
catapult/team2/: BUILD.bazel  module.ts
catapult/team3/: BUILD.bazel  module.ts
catapult/team4/: BUILD.bazel  module.ts
catapult/team5/: BUILD.bazel  module.ts
catapult/team6/: BUILD.bazel  module.ts
catapult/team7/: BUILD.bazel  module.ts
catapult/team8/: BUILD.bazel  module.ts
catapult/team9/: BUILD.bazel  module.ts
deforest/: BUILD.bazel  app.ts
deforest/team0/: BUILD.bazel  module.ts
deforest/team1/: BUILD.bazel  module.ts
deforest/team2/: BUILD.bazel  module.ts
deforest/team3/: BUILD.bazel  module.ts
deforest/team4/: BUILD.bazel  module.ts
deforest/team5/: BUILD.bazel  module.ts
deforest/team6/: BUILD.bazel  module.ts
deforest/team7/: BUILD.bazel  module.ts
deforest/team8/: BUILD.bazel  module.ts
deforest/team9/: BUILD.bazel  module.ts
emulator/: BUILD.bazel  app.ts
emulator/team0/: BUILD.bazel  module.ts
emulator/team1/: BUILD.bazel  module.ts
emulator/team2/: BUILD.bazel  module.ts
emulator/team3/: BUILD.bazel  module.ts
emulator/team4/: BUILD.bazel  module.ts
emulator/team5/: BUILD.bazel  module.ts
emulator/team6/: BUILD.bazel  module.ts
emulator/team7/: BUILD.bazel  module.ts
emulator/team8/: BUILD.bazel  module.ts
emulator/team9/: BUILD.bazel  module.ts
flooring/: BUILD.bazel  app.ts
flooring/team0/: BUILD.bazel  module.ts
flooring/team1/: BUILD.bazel  module.ts
flooring/team2/: BUILD.bazel  module.ts
flooring/team3/: BUILD.bazel  module.ts
flooring/team4/: BUILD.bazel  module.ts
flooring/team5/: BUILD.bazel  module.ts
flooring/team6/: BUILD.bazel  module.ts
flooring/team7/: BUILD.bazel  module.ts
flooring/team8/: BUILD.bazel  module.ts
flooring/team9/: BUILD.bazel  module.ts
graphite/: BUILD.bazel  app.ts
graphite/team0/: BUILD.bazel  module.ts
graphite/team1/: BUILD.bazel  module.ts
graphite/team2/: BUILD.bazel  module.ts
graphite/team3/: BUILD.bazel  module.ts
graphite/team4/: BUILD.bazel  module.ts
graphite/team5/: BUILD.bazel  module.ts
graphite/team6/: BUILD.bazel  module.ts
graphite/team7/: BUILD.bazel  module.ts
graphite/team8/: BUILD.bazel  module.ts
graphite/team9/: BUILD.bazel  module.ts
humanoid/: BUILD.bazel  app.ts
humanoid/team0/: BUILD.bazel  module.ts
humanoid/team1/: BUILD.bazel  module.ts
humanoid/team2/: BUILD.bazel  module.ts
humanoid/team3/: BUILD.bazel  module.ts
humanoid/team4/: BUILD.bazel  module.ts
humanoid/team5/: BUILD.bazel  module.ts
humanoid/team6/: BUILD.bazel  module.ts
humanoid/team7/: BUILD.bazel  module.ts
humanoid/team8/: BUILD.bazel  module.ts
humanoid/team9/: BUILD.bazel  module.ts
internal/: BUILD.bazel  app.ts
internal/team0/: BUILD.bazel  module.ts
internal/team1/: BUILD.bazel  module.ts
internal/team2/: BUILD.bazel  module.ts
internal/team3/: BUILD.bazel  module.ts
internal/team4/: BUILD.bazel  module.ts
internal/team5/: BUILD.bazel  module.ts
internal/team6/: BUILD.bazel  module.ts
internal/team7/: BUILD.bazel  module.ts
internal/team8/: BUILD.bazel  module.ts
internal/team9/: BUILD.bazel  module.ts
joystick/: BUILD.bazel  app.ts
joystick/team0/: BUILD.bazel  module.ts
joystick/team1/: BUILD.bazel  module.ts
joystick/team2/: BUILD.bazel  module.ts
joystick/team3/: BUILD.bazel  module.ts
joystick/team4/: BUILD.bazel  module.ts
src/: BUILD.bazel  app.component.html  app.component.ts  app.module.ts  app.ts  es6.bzl  friends.service.ts  index.html  main.dev.ts  main.prod.ts  rollup.bzl
tools/: BUILD.bazel
(+20064 files in other folders)
