load("@angular//:index.bzl", "ng_module")
load("//:es6_consumer.bzl", "es6_consumer")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ng_module(
  name = "angular-demo",
  srcs = glob(["*.ts"]),
    
  tsconfig = "//:tsconfig.json",
)

es6_consumer(
  name = "es6",
  deps = [":angular-demo"],
)

nodejs_binary(
  name = "bundle",
  entry_point = "./angular-demo/bundle.js",
  data = [
    
    ":bundle"
  ]
)