package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = ["//src/hello-world"],
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zone.js",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    entry_module = "angular_bazel_example/src/main",
    scripts = ["//:angular_bundles"],
    serving_path = "/bundle.js",
    static_files = [
        ":zone.js",
        "index.html",
    ],
    deps = ["//src"],
)

load(":es6.bzl", "es6")

es6(
    name = "es6",
    deps = [":src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "rollup",
    entry_point = "rollup/bin/rollup",
    data = [
        "//:rollup.config.js",
        ":es6"
    ]
 )

nodejs_binary(
    name = "es5",
    entry_point = "typescript/bin/tsc"
)

nodejs_binary(
    name = "uglify",
    entry_point = "uglify-js/bin/uglifyjs"
)

load(":rollup.bzl", "rollup")
rollup(
    name = "bundle",
    entry_point = "main.js"
)
