package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "team1",
    srcs = ["module.ts"],
    deps = ["//airplane/team1/mod0:mod0","//airplane/team1/mod1:mod1","//airplane/team1/mod2:mod2","//airplane/team1/mod3:mod3","//airplane/team1/mod4:mod4","//airplane/team1/mod5:mod5","//airplane/team1/mod6:mod6","//airplane/team1/mod7:mod7","//airplane/team1/mod8:mod8","//airplane/team1/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)
#karma_test(
#    name = "unit_tests",
#    deps = ["//airplane/team1/mod0:mod0",
#        "//airplane/team1/mod1:mod1",
#        "//airplane/team1/mod2:mod2",
#        "//airplane/team1/mod3:mod3",
#        "//airplane/team1/mod4:mod4",
#        "//airplane/team1/mod5:mod5",
#        "//airplane/team1/mod6:mod6",
#        "//airplane/team1/mod7:mod7",
#        "//airplane/team1/mod8:mod8",
#        "//airplane/team1/mod9:mod9",
#        # FIXME(alexeagle): doesn't belong here
#        "@karma//internal/karma_concat_js",
#    ],
#    tags = ["local"]
#)
      