package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "team9",
    srcs = ["module.ts"],
    deps = ["//airplane/team9/mod0:mod0","//airplane/team9/mod1:mod1","//airplane/team9/mod2:mod2","//airplane/team9/mod3:mod3","//airplane/team9/mod4:mod4","//airplane/team9/mod5:mod5","//airplane/team9/mod6:mod6","//airplane/team9/mod7:mod7","//airplane/team9/mod8:mod8","//airplane/team9/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)
#karma_test(
#    name = "unit_tests",
#    deps = ["//airplane/team9/mod0:mod0",
#        "//airplane/team9/mod1:mod1",
#        "//airplane/team9/mod2:mod2",
#        "//airplane/team9/mod3:mod3",
#        "//airplane/team9/mod4:mod4",
#        "//airplane/team9/mod5:mod5",
#        "//airplane/team9/mod6:mod6",
#        "//airplane/team9/mod7:mod7",
#        "//airplane/team9/mod8:mod8",
#        "//airplane/team9/mod9:mod9",
#        # FIXME(alexeagle): doesn't belong here
#        "@karma//internal/karma_concat_js",
#    ],
#    tags = ["local"]
#)
      