package(default_visibility = ["//visibility:public"])
load("@angular//:index.bzl", "ng_module")

ng_module(
  name = "team",
  deps = [
    "//angular-demo/team/team0",
    "//angular-demo/team/team1",
    "//angular-demo/team/team2",
    "//angular-demo/team/team3",
    "//angular-demo/team/team4",
    "//angular-demo/team/team5",
    "//angular-demo/team/team6",
    "//angular-demo/team/team7",
    "//angular-demo/team/team8",
    "//angular-demo/team/team9" 
  ],
  srcs = glob(["**/*.ts"]),
  tsconfig = "//:tsconfig.json",
)