package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "team0",
    srcs = ["module.ts"],
    deps = ["//angular-demo/team0/mod0:mod0","//angular-demo/team0/mod1:mod1","//angular-demo/team0/mod2:mod2","//angular-demo/team0/mod3:mod3","//angular-demo/team0/mod4:mod4","//angular-demo/team0/mod5:mod5","//angular-demo/team0/mod6:mod6","//angular-demo/team0/mod7:mod7","//angular-demo/team0/mod8:mod8","//angular-demo/team0/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)
#karma_test(
#    name = "unit_tests",
#    deps = ["//angular-demo/team0/mod0:mod0",
#        "//angular-demo/team0/mod1:mod1",
#        "//angular-demo/team0/mod2:mod2",
#        "//angular-demo/team0/mod3:mod3",
#        "//angular-demo/team0/mod4:mod4",
#        "//angular-demo/team0/mod5:mod5",
#        "//angular-demo/team0/mod6:mod6",
#        "//angular-demo/team0/mod7:mod7",
#        "//angular-demo/team0/mod8:mod8",
#        "//angular-demo/team0/mod9:mod9",
#        # FIXME(alexeagle): doesn't belong here
#        "@karma//internal/karma_concat_js",
#    ],
#    tags = ["local"]
#)
      