package(default_visibility = ["//visibility:public"])
load("@angular//:index.bzl", "ng_module")

load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

sass_binary(
    name = "treeview-styles",
    src = "treeview.scss"
)
 
ng_module(
  name = "treeview",
  srcs = glob(["**/*.ts"]),
  tsconfig = "//:tsconfig.json",
  assets = [":treeview-styles"]
)