package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "team2",
    srcs = ["module.ts"],
    deps = ["//biofuels/team2/mod0:mod0","//biofuels/team2/mod1:mod1","//biofuels/team2/mod2:mod2","//biofuels/team2/mod3:mod3","//biofuels/team2/mod4:mod4","//biofuels/team2/mod5:mod5","//biofuels/team2/mod6:mod6","//biofuels/team2/mod7:mod7","//biofuels/team2/mod8:mod8","//biofuels/team2/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)
#karma_test(
#    name = "unit_tests",
#    deps = ["//biofuels/team2/mod0:mod0",
#        "//biofuels/team2/mod1:mod1",
#        "//biofuels/team2/mod2:mod2",
#        "//biofuels/team2/mod3:mod3",
#        "//biofuels/team2/mod4:mod4",
#        "//biofuels/team2/mod5:mod5",
#        "//biofuels/team2/mod6:mod6",
#        "//biofuels/team2/mod7:mod7",
#        "//biofuels/team2/mod8:mod8",
#        "//biofuels/team2/mod9:mod9",
#        # FIXME(alexeagle): doesn't belong here
#        "@karma//internal/karma_concat_js",
#    ],
#    tags = ["local"]
#)
      