package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "team7",
    srcs = ["module.ts"],
    deps = ["//catapult/team7/mod0:mod0","//catapult/team7/mod1:mod1","//catapult/team7/mod2:mod2","//catapult/team7/mod3:mod3","//catapult/team7/mod4:mod4","//catapult/team7/mod5:mod5","//catapult/team7/mod6:mod6","//catapult/team7/mod7:mod7","//catapult/team7/mod8:mod8","//catapult/team7/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)
#karma_test(
#    name = "unit_tests",
#    deps = ["//catapult/team7/mod0:mod0",
#        "//catapult/team7/mod1:mod1",
#        "//catapult/team7/mod2:mod2",
#        "//catapult/team7/mod3:mod3",
#        "//catapult/team7/mod4:mod4",
#        "//catapult/team7/mod5:mod5",
#        "//catapult/team7/mod6:mod6",
#        "//catapult/team7/mod7:mod7",
#        "//catapult/team7/mod8:mod8",
#        "//catapult/team7/mod9:mod9",
#        # FIXME(alexeagle): doesn't belong here
#        "@karma//internal/karma_concat_js",
#    ],
#    tags = ["local"]
#)
      